<resources>
    <string name="app_name">News</string>

    <!-- Crash -->
    <string name="crash_title">Ooops!</string>
    <string name="crash_hint">We are sorry, something went terribly wrong.</string>

    <!-- Common -->
    <string name="common_appbar_title_center_resolve">%1$s&#8203;</string>
    <string name="common_ok">Oke</string>
    <string name="common_confirm">Confirm</string>

    <string name="news">News</string>
    <string name="details">Details</string>
    <string name="back">Back</string>
    <string name="search">Input text here…</string>
    <string name="network_no_connection_header">No connection</string>
    <string name="network_no_connection_title">No connection</string>
    <string name="network_response_error_header">No connection</string>
    <string name="network_response_error_title">No connection</string>
    <string name="menu_home">Home</string>
    <string name="menu_service">Service</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_promotion">Promotion</string>
    <string name="menu_store">Store</string>
    <string name="common_title">Title</string>
    <string name="common_dialog_message">Error message</string>

    <string name="updated_time">Updated: %s</string>
    <string name="sample_title">Sample Title</string>
    <string name="common_nodata">No Data Available</string>
    <string name="common_error">Error</string>
</resources>
