<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:paddingVertical="32dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_info_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorOnSurface" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/network_response_error_header"
        android:textColor="@color/colorTextContent"
        android:textSize="@dimen/text_header_16_sp"
        app:fontFamily="@font/prompt_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/network_response_error_title"
        android:textColor="@color/blackMedium"
        android:textSize="@dimen/text_title_14_sp"
        app:fontFamily="@font/sarabun_regular"
        app:layout_constraintEnd_toEndOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="@id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirm"
        style="@style/ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="32dp"
        android:text="@string/common_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>