<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingTop="28dp"
            android:paddingBottom="21dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:fontFamily="@font/prompt_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/common_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:textAlignment="center"
                android:textColor="@color/blackMedium"
                android:textSize="14sp"
                app:fontFamily="@font/sarabun_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle"
                tools:text="@string/common_dialog_message" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/groupButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMessage">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCancel"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="44dp"
                    android:text="@string/common_cancel"
                    android:textColor="@color/black"
                    app:fontFamily="@font/prompt_semi_bold"
                    app:strokeColor="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonOk"
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="44dp"
                    android:text="@string/common_ok"
                    app:fontFamily="@font/prompt_semi_bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>